# pycp

./: .bumpversion.cfg  .coveragerc  .flake8  .gitignore  .pylintrc  .travis.yml  AUTHORS  COPYING  Changelog  Changelog.rst  MANIFEST  MANIFEST.in  PKGBUILD  README  README.rst  README.txt  TODO  TODO.md  ci.sh  dev-requirements.txt  lint.sh  mypy.ini  pycp  pycp.1  pycp.py  pyproject.toml  run-mccabe.py  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: linters.yml  tests.yml
bench/: .gitignore  run.py  run.sh  setup.py
doc/: pycp.1  pymv.1
pycp/: __init__.py  main.py  multipbar.py  options.py  pbar.py  progress.py  transfer.py  util.py
test/: conftest.py  test.py  test_print_transfer.py  test_progress.py  test_pycp.py  test_pymv.py  test_transfer_text.py
test/test_dir/a_dir/: .hidden
