[tool.poetry]
name = "pycp"
version = "8.0.8"
description = "cp, mv and rm with a progress bar"
authors = ["Dimitri Merejkowsky <d.merej@gmail.com>"]
license = "MIT"
readme = "README.rst"
repository = "http://github.com/dmerejkowsky/pycp"
keywords = ["command line"]
classifiers=[
  "Environment :: Console",
  "Operating System :: Unix",
  "Topic :: System :: Shells",
]

[tool.poetry.dependencies]
python = "^3.6"
attrs = "^19.3.0"

[tool.poetry.dev-dependencies]
black = { version = "^19.10b0", markers = "implementation_name != 'pypy'" }
path = "^13.2.0"
flake8 = "^3.7.9"
pytest = "^5.4.1"
pytest-mock = "^3.1.0"
pytest-cov = "^2.8.1"
mypy = { version = "^0.770", markers = "implementation_name != 'pypy'" }

[tool.poetry.scripts]
pycp = "pycp.main:main"
pymv = "pycp.main:main"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
