[tool.isort]
profile = "black"

[tool.poetry]
name = "pycp"
version = "8.0.8"
description = "cp, mv and rm with a progress bar"
authors = ["Dimitri Merejkowsky <d.merej@gmail.com>"]
license = "MIT"
readme = "README.rst"
repository = "http://github.com/your-tools/pycp"
keywords = ["command line"]
classifiers=[
  "Environment :: Console",
  "Operating System :: Unix",
  "Topic :: System :: Shells",
]

[tool.poetry.dependencies]
python = "^3.8.1"

[tool.poetry.group.dev.dependencies]
black = "^23"
isort = "^5.13.2"
flake8 = "^6.1"
pytest = "^7.4"
pytest-mock = "^3.12"
pytest-cov = "^4.1"
mypy = "^1.7"

[tool.poetry.scripts]
pycp = "pycp.main:main"
pymv = "pycp.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
